<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundColor"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/main_infoScreenButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_outline_info_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/main_appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_controlProtectionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/main_appDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_appNameText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_controlProtectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:backgroundTint="@color/white"
        app:elevation="4dp"
        app:fabCustomSize="64dp"
        app:tint="@color/accentColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/accentColorSecondary"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/main_controlProtectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enable_protection"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/main_controlProtectionButton"
        app:layout_constraintStart_toStartOf="@+id/main_controlProtectionButton"
        app:layout_constraintTop_toBottomOf="@+id/main_controlProtectionButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_addFiltersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/white"
        app:elevation="4dp"
        app:tint="@color/accentColorSecondary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/accentColorSecondary"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>