<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundColor"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/setup_backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/main_appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blacklist"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/main_appDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blacklist_description"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_appNameText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRecycler"
        style="@style/ScrollbarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_appDescriptionText"
        tools:listitem="@layout/blocked_holder" />


    <TextView
        android:id="@+id/setup_noBlockingContactsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        android:maxWidth="200dp"
        android:text="@string/no_blocked_contacts_press_to_add"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/addContact"
        app:layout_constraintEnd_toStartOf="@+id/addContact"
        app:layout_constraintTop_toTopOf="@+id/addContact" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_person_add_24"
        app:backgroundTint="@color/white"
        app:elevation="4dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/accentColorSecondary"
        app:tint="@color/accentColorSecondary"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_appDescriptionText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appsRecycler"
        style="@style/ScrollbarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:listitem="@layout/blocked_holder" />


    <TextView
        android:id="@+id/setup_noBlockingAppsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        android:maxWidth="200dp"
        android:text="@string/no_blocked_apps_press_to_add"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/setup_addApp"
        app:layout_constraintStart_toEndOf="@+id/setup_addApp"
        app:layout_constraintTop_toTopOf="@+id/setup_addApp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setup_addApp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_library_add_24"
        app:backgroundTint="@color/white"
        app:elevation="4dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/accentColorSecondary"
        app:tint="@color/accentColorSecondary"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>